--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <div class="service-image-container">
                         <img src="/img/view3.jpg" alt="Procesamiento de Minerales">
                         <div class="service-image-overlay">
-                            <h3 class="service-title">Procesamiento de Minerales</h3>
+                            <h3 class="service-title">Procesamiento y Fundición de Minerales</h3>
                         </div>
                     </div>
                     <div class="service-content">
@@ -334,7 +334,7 @@
                     <div class="service-image-container">
                         <img src="/img/minerals.jpg" alt="Comercialización de Minerales">
                         <div class="service-image-overlay">
-                            <h3 class="service-title">Comercialización de Minerales</h3>
+                            <h3 class="service-title">Comercialización y Venta de Minerales</h3>
                         </div>
                     </div>
                     <div class="service-content">
@@ -343,6 +343,41 @@
                             sus productos minerales.
                         </p>
                         <a href="/minerals" class="text-link">
+                            Más información
+                            <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
+                        </a>
+                    </div>
+                </div>
+                <div class="service-card-redesign">
+                    <div class="service-image-container">
+                        <img src="/img/barite-drilling.jpg" alt="Barita para el sector petrolero">
+                        <div class="service-image-overlay">
+                            <h3 class="service-title">Barita para Sector Petrolero</h3>
+                        </div>
+                    </div>
+                    <div class="service-content">
+                        <p class="service-description">
+                            Suministro de barita de alta densidad, cumpliendo con los estándares API, para optimizar fluidos de perforación en la industria petrolera.
+                        </p>
+                        <a href="/barite" class="text-link">
+                            Más información
+                            <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service-card-redesign">
+                    <div class="service-image-container">
+                        <img src="/img/water-trucks.jpg" alt="Surtido de Agua Industrial">
+                        <div class="service-image-overlay">
+                            <h3 class="service-title">Surtido de Agua Industrial</h3>
+                        </div>
+                    </div>
+                    <div class="service-content">
+                        <p class="service-description">
+                            Soluciones confiables para el abastecimiento de agua no potable para procesos industriales, control de polvo y operaciones mineras.
+                        </p>
+                        <a href="/water-supply" class="text-link">
                             Más información
                             <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
                         </a>
