--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
                     </div>
                     <div class="service-content">
                         <p class="service-description">
-                            Suministro de barita de alta densidad, cumpliendo con los estándares API, para optimizar fluidos de perforación en la industria petrolera.
+                            Suministro de barita de alta densidad, cumpliendo con los estándares API, para optimizar
+                            fluidos de perforación en la industria petrolera.
                         </p>
                         <a href="/barite" class="text-link">
                             Más información
@@ -375,7 +376,8 @@
                     </div>
                     <div class="service-content">
                         <p class="service-description">
-                            Soluciones confiables para el abastecimiento de agua no potable para procesos industriales, control de polvo y operaciones mineras.
+                            Soluciones confiables para el abastecimiento de agua no potable para procesos industriales,
+                            control de polvo y operaciones mineras.
                         </p>
                         <a href="/water-supply" class="text-link">
                             Más información
@@ -557,6 +559,40 @@
         </div>
     </section>
 
+    <!-- NUEVA SECCIÓN: Distribuidores de Aceites y Lubricantes -->
+    <section class="clients-section lubricants-section">
+    <div class="clients-container">
+        <h4 class="clients-title">Somos Distribuidores de Aceites y Lubricantes</h4>
+        <div class="clients-divider"></div>
+        <!-- Primera fila: 4 imágenes -->
+        <div class="clients-grid lubricants-row">
+            <div class="client-logo">
+                <img src="/img/lubricantes/donaldson.jpeg" alt="Lubricante 2">
+            </div>
+            <div class="client-logo">
+                <img src="/img/lubricantes/infinity.jpeg" alt="Lubricante 3">
+            </div>
+            <div class="client-logo">
+                <img src="/img/lubricantes/lth.png" alt="Lubricante 4">
+            </div>
+            <div class="client-logo">
+                <img src="/img/lubricantes/sakura.png" alt="Lubricante 5">
+            </div>
+        </div>
+        <!-- Segunda fila: las demás -->
+        <div class="clients-grid lubricants-row">
+            <div class="client-logo">
+                <img src="/img/lubricantes/sekurit.jpeg" alt="Lubricante 1">
+            </div>
+            <div class="client-logo">
+                <img src="/img/lubricantes/maxone.jpeg" alt="Lubricante 5">
+            </div>
+            <div class="client-logo">
+                <img src="/img/lubricantes/ultraplus.jpeg" alt="Lubricante 5">
+            </div>
+        </div>
+    </div>
+</section>
     <!-- NUEVA SECCIÓN: Video -->
     <section class="video-section">
         <video class="video-background" autoplay loop muted>
@@ -806,7 +842,7 @@
                 <li><a href="/cookies-policy">Política de cookies</a></li>
                 <li><a href="/accessibility">Accesibilidad</a></li>
                 <li><a href="/speaking-openly">Comunicación abierta / Reportar inquietudes</a></li>
-                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>                
+                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>
             </ul>
         </div>
 
