--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
                 <div class="service-card-redesign">
                     <div class="service-image-container">
-                        <img src="/img/water-trucks.jpg" alt="Surtido de Agua Industrial">
+                        <img src="/img/pipa3.webp" alt="Surtido de Agua Industrial">
                         <div class="service-image-overlay">
                             <h3 class="service-title">Surtido de Agua Industrial</h3>
                         </div>
